Update dependencies (including Ktor), remove `IoCoroutineWorker` (#2902)
* Bump the app-dependencies group across 1 directory with 24 updates

Bumps the app-dependencies group with 24 updates in the / directory:

| Package | From | To |
| --- | --- | --- |
| androidx.compose:compose-bom | `2026.08.00` | `2026.09.00` |
| androidx.room:room-ktx | `2.8.4` | `2.8.5` |
| androidx.room:room-compiler | `2.8.4` | `2.8.5` |
| androidx.room:room-paging | `2.8.4` | `2.8.5` |
| androidx.room:room-runtime | `2.8.4` | `2.8.5` |
| androidx.room:room-testing | `2.8.4` | `2.8.5` |
| androidx.room:room-compiler | `2.8.4` | `2.8.5` |
| androidx.room:room-paging | `2.8.4` | `2.8.5` |
| androidx.room:room-runtime | `2.8.4` | `2.8.5` |
| androidx.room:room-testing | `2.8.4` | `2.8.5` |
| [org.jetbrains.kotlin:kotlin-gradle-plugin](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin:kotlin-stdlib](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin:kotlin-test](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.plugin.compose](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.plugin.serialization](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin:kotlin-stdlib](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin:kotlin-test](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [io.ktor:ktor-client-auth](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-content-negotiation](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-core](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-encoding](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-logging](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-mock](https://github.com/ktorio/ktor) | `3.5.2` | `3.6